--- a/layouts/chrome/sidebar.html
+++ b/layouts/chrome/sidebar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-   	<p>  <img src="images/ioos_blue2.png"
+   	<p>  <img src="/glossary/images/ioos_blue2.png"
    	alt="ioos_blue2.png"> </p> 
 
 	<div class="container sidebar-sticky">
@@ -12,10 +12,10 @@
 
 <!-- sidebar menu start-->
     <ul class="sidebar-nav">
-	  <li><a href="/glossary/">Home</a> </li>
-	  <li><a href="/glossary/about/">About glossary</a> </li>
-	  <li><a href="https://github.com/duncombe/glossary">glossary on GitHub</a> </li>
-	  <li><a href="http://ioos.github.io">IOOS GitHub Pages</a> </li>
+	  <li><a href="/glossary/">home</a> </li>
+	  <li><a href="/glossary/website-install/">about glossary</a> </li>
+	  <li><a href="https://github.com/duncombe/glossary">glossary on github</a> </li>
+	  <li><a href="http://ioos.github.io">IOOS github pages</a> </li>
       {{ range .Site.Menus.main }}
         <li><a href="{{.Url}}"> {{ .Name }} </a></li>
       {{end}}
