--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,10 +17,7 @@
     <!--  <div class="meta">{{ .Date.Format "Mon, Jan 2, 2006" }}</div> -->
     </header>
 	
-	{{ if eq .RelPermalink "about.html" }} 
-	<!--	{{ .Summary }} -->
-
-	{{else}}
+	{{ if not ( eq .Permalink "/glossary/index.html" ) }} 
 		{{ .Content }}
 	{{end}}
 
