--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,11 +20,8 @@
     </header>
 
 
-	{{ if not ( eq .Permalink "/glossary/index.html" ) }} 
+	{{ if ( eq .RelPermalink "/" ) }} 
 		{{ .Content }}
-		{{ if .IsNode }}
-			print hello
-		{{ end }}
 	{{end}}
 
     <footer>
