--- a/layouts/chrome/sidebar.html
+++ b/layouts/chrome/sidebar.html
@@ -12,7 +12,7 @@
 
 <!-- sidebar menu start-->
     <ul class="sidebar-nav">
-	  <li><a href="{{ .Site.BaseUrl }}">home</a> </li>
+	  <li><a href="{{ .Site.BaseUrl }}">glossary home</a> </li>
 	  <li><a href="{{ .Site.BaseUrl }}/website-install/">about glossary</a> </li>
 	  <li><a href="https://github.com/duncombe/glossary">glossary on github</a> </li>
 	  <li><a href="http://ioos.github.io" target="_blank">IOOS github pages</a> </li>
