--- a/layouts/chrome/head.html
+++ b/layouts/chrome/head.html
@@ -16,10 +16,12 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <!-- apparently never used -->
+  <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/touch-icon-144-precomposed.png"> -->
+  <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
 
   <!-- RSS -->
   <link href="{{ .RSSlink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
 
+<!-- vi: se nowrap tw=0 : -->
