--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,23 +12,22 @@
  
   <div class="post">
 
-	{{ range .Data.Pages }}
-
     <header>
       <h2><a href='{{ .Permalink }}'> {{ .Title }}</a> </h2>
     <!--  <div class="meta">{{ .Date.Format "Mon, Jan 2, 2006" }}</div> -->
     </header>
 
 
-	{{ if ( eq .RelPermalink "/" ) }} 
-		{{ .Content }}
-	{{end}}
+	{{ range $key, $value := .Site.Indexes.groups.about.Pages }} 
+	{{ $value.Content }} 
+	{{ end }} 
+
+
 
     <footer>
         <!--a href='{{ .Permalink }}'><nobr><i>Read more ></i></nobr></a-->
     </footer>
 
-	{{ end }}
 
 	</div>
 
