--- a/layouts/chrome/sidebar.html
+++ b/layouts/chrome/sidebar.html
@@ -13,7 +13,7 @@
 <!-- sidebar menu start-->
     <ul class="sidebar-nav">
 	  <li><a href="{{ .Site.BaseUrl }}">glossary home</a> </li>
-	  <li><a href="{{ .Site.BaseUrl }}/website-install/">about glossary</a> </li>
+	  <li><a href="{{ .Site.BaseUrl }}/docs/website-install/">about glossary</a> </li>
 	  <li><a href="https://github.com/duncombe/glossary">glossary on github</a> </li>
 	  <li><a href="http://ioos.github.io" target="_blank">IOOS github pages</a> </li>
       {{ range .Site.Menus.main }}
