--- a/layouts/chrome/sidebar.html
+++ b/layouts/chrome/sidebar.html
@@ -28,6 +28,7 @@
    	<p>  <img src="../images/ioos_blue2.png" alt="ho-ho-ho" height="36" width="374"> </p> 
 -->  
 
-	<p>{{ with .Site.Params.Copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
+	<p style="font-size:75%">{{ with .Site.Params.Copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
+	<p style="font-size:65%"> Created with Hugo version: DEFAULT </p>
   </div>
 </div>
