--- a/layouts/chrome/sidebar.html
+++ b/layouts/chrome/sidebar.html
@@ -1,6 +1,5 @@
 <div class="sidebar">
-   	<p>  <img src="{{ .Site.BaseUrl }}/images/ioos_blue2.png"
-   	alt="ioos_blue2.png"> </p> 
+   	<!-- <p>  <img src="{{ .Site.BaseUrl }}/images/ioos_blue2.png" alt="ioos_blue2.png"> </p> -->
 
 	<div class="container sidebar-sticky">
     <div class="sidebar-about">
